@@ -1,5 +1,6 @@
 == master
 
+* Add all prefers/preferred accessors for preferences to be analogous to ActiveRecord column accessors
 * Fix preferences defined in STI subclasses not working [Quinn Shanahan]
 
 == 0.1.4 / 2008-10-26
